--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Build
-        run: tar --exclude-ignore=.appignore --transform 's,^\./,calendar_news/,' -cvzf calendar_news.tar.gz .
+        run: touch calendar_news.tar.gz && tar --exclude-ignore=.appignore --transform 's,^\./,calendar_news/,' -cvzf calendar_news.tar.gz .
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v2.2.0
         with:
